# WinZOX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
extensions/repair_kit/: CMakeLists.txt
extensions/repair_kit/include/winzox/extensions/repair_kit/: repair_kit_api.h
extensions/repair_kit/src/: repair_kit.cpp
src/app/: main.cpp
src/archive/: archive.cpp  archive.hpp
src/compression/: compressor.cpp  compressor.hpp
src/crypto/: aes256.cpp
src/crypto/algorithms/aes/: aes256.hpp
src/crypto/algorithms/gorgon/: gorgon.cpp  gorgon_api.cpp
src/extraction/: extractor.cpp  extractor.hpp
src/extraction/api/unzox/: unzox_c_api.cpp  unzox_c_api.h
src/extraction/decoder/: decode_pipeline.cpp  decode_pipeline.hpp
src/io/: file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  volume_reader.cpp  volume_reader.hpp  volume_writer.cpp  volume_writer.hpp
src/shell/: windows_shell.cpp  windows_shell.hpp  windows_shell_add_dialog.cpp  windows_shell_browse_dialog.cpp  windows_shell_internal.hpp
src/utils/: checksum.cpp  checksum.hpp  path_utils.cpp  path_utils.hpp  progress.hpp
